--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.mimminito.livewallpapertemplate"
+      package="com.circularvale.catwallbounce"
       android:versionCode="9"
       android:versionName="2.0.1">
       
@@ -12,7 +12,7 @@
     	
     	<!-- Live Wallpaper Service -->
     	<service
-            android:name="LiveWallpaperTemplate"
+            android:name=".CatWallBounce"
 			android:enabled="true"
 			android:icon="@drawable/icon"
 			android:label="@string/app_name"
@@ -28,7 +28,7 @@
         <!-- Live Wallpaper Settings Activity -->
         <activity
         	android:label="@string/wallpaper_settings"
-        	android:name="LiveWallpaperTemplateSettings"
+        	android:name=".CatWallBounceSettings"
         	android:theme="@android:style/Theme.Light.WallpaperSettings"
         	android:exported="true">
         </activity>
